# shards-installer

./: README.md  meson.build  projects.shards.installer.json
data/: meson.build  projects.shards.installer.desktop.in  projects.shards.installer.gschema.xml  projects.shards.installer.metainfo.xml.in  projects.shards.installer.service.in
data/icons/: meson.build
data/session/: installer-session.desktop  installer-session.json  installer-session.session  installer-session.session.conf
po/: POTFILES.in  meson.build
src/: main.c  meson.build  shardsinstaller-application.c  shardsinstaller-application.h  shardsinstaller-window.c  shardsinstaller-window.h  shardsinstaller-window.ui  shardsinstaller.gresource.xml  style.css
src/pages/disk-selection/: shardsinstaller-disk-selection.c  shardsinstaller-disk-selection.h  shardsinstaller-disk-selection.ui
src/pages/install-fail/: shardsinstaller-install-fail.c  shardsinstaller-install-fail.h  shardsinstaller-install-fail.ui
src/pages/install-progress/: shardsinstaller-install-progress.c  shardsinstaller-install-progress.h  shardsinstaller-install-progress.ui
src/pages/install-success/: shardsinstaller-install-success.c  shardsinstaller-install-success.h  shardsinstaller-install-success.ui
src/pages/welcome/: shardsinstaller-welcome.c  shardsinstaller-welcome.h  shardsinstaller-welcome.ui
src/utils/: disks.c  disks.h  gnome-session-quit.c  gnome-session-quit.h
src/widgets/: shardsinstaller-disk-entry.c  shardsinstaller-disk-entry.h  shardsinstaller-disk-entry.ui
